feat(payment): add bottomsheetdialog
thêm dialog thông tin thanh toán

--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/gilroy_bold"
-        android:text="Nạp xu"
+        android:text="@string/n_p_xu"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,6 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="50dp"
-        android:onClick="onClick"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/cardView3"
         app:layout_constraintEnd_toEndOf="@+id/ln299"
@@ -130,7 +129,6 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
-        android:onClick="onClick"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/ln999"
         app:layout_constraintEnd_toStartOf="@+id/ln499"
@@ -175,7 +173,6 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
-        android:onClick="onClick"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/ln299"
         app:layout_constraintEnd_toStartOf="@+id/ln199"
@@ -221,7 +218,6 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
-        android:onClick="onClick"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/ln999"
         app:layout_constraintEnd_toEndOf="parent"
@@ -266,7 +262,6 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
-        android:onClick="onClick"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/ln499"
         app:layout_constraintEnd_toEndOf="parent"
@@ -311,7 +306,6 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
-        android:onClick="onClick"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/ln199"
         app:layout_constraintEnd_toEndOf="parent"
@@ -387,7 +381,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:background="@color/green_color"
-            android:text="Nạp xu"
+            android:text="@string/n_p_xu"
             android:textAllCaps="false"
             android:textColor="@color/text_color_white"
             android:textSize="20sp" />
