--- a/app/src/main/res/drawable/background_image_while.xml
+++ b/app/src/main/res/drawable/background_image_while.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#E6E8E6E6"/>
+    <solid android:color="#000"/>
 
     <corners android:radius="0dp" />
 </shape>
