--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -72,18 +72,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="4"
+                        android:textColor="@color/text_color_white"
                         android:text="@{viewmodel.data.synopsis}"
-                        android:textSize="25sp" />
+                        android:textSize="20dp" />
 
                     <TextView
                         android:id="@+id/btnMore"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|bottom"
-                        android:background="@color/text_color_white"
+                        android:background="#000"
                         android:text="...more"
                         android:textColor="@color/green_color"
-                        android:textSize="25sp" />
+                        android:textSize="20dp" />
 
                 </FrameLayout>
 
@@ -93,16 +94,6 @@
                     android:layout_margin="20dp"
                     android:adapter="@{adapter}" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="10dp"
-                    android:drawableStart="@drawable/ic_account"
-                    android:drawablePadding="10dp"
-                    android:gravity="center"
-                    android:text="@{viewmodel.data.author}"
-                    android:textSize="20dp" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
