--- a/app/src/main/res/layout/fragment_detail_chapter.xml
+++ b/app/src/main/res/layout/fragment_detail_chapter.xml
@@ -21,18 +21,19 @@
         android:focusable="true"
         app:layoutDescription="@xml/fragment_detail_chapter_xml_constraintlayout2_scene">
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adapter_detail_chapter="@{adapter}"
+            android:seekbar="@{seekbar}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
+            app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
             android:id="@+id/linearLayout4"
@@ -62,17 +63,19 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="3"
                 android:gravity="center"
+                android:text_custom_endpoint="@{viewmodel.data.chapter_endpoint}"
                 android:textColor="@color/text_color_white"
                 android:textSize="25sp" />
 
             <TextView
+                android:id="@+id/txtShowChap"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:layout_weight="1"
-                android:drawableEnd="@drawable/ic_lock" />
+                android:drawableEnd="@drawable/ic_chap" />
         </LinearLayout>
 
         <TextView
@@ -105,26 +108,11 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/textView13"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@{viewmodel.data.chapter_endpoint}"
-                android:textColor="@color/text_color_white"
-                android:textSize="25sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <TextView
                 android:id="@+id/btnBackChap"
-                android:layout_width="100dp"
+                android:layout_width="50dp"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
+                android:layout_marginStart="10dp"
                 android:drawableStart="@drawable/ic_back_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,13 +120,50 @@
 
             <TextView
                 android:id="@+id/btnNextChap"
-                android:layout_width="100dp"
+                android:layout_width="50dp"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
                 android:drawableEnd="@drawable/ic_next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <SeekBar
+                android:id="@+id/seekbar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:dataChapter="@{viewmodel.data}"
+                android:recycleView="@{recyclerView}"
+                android:textView="@{txtSize}"
+                android:textPos="@{txtPosition}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/txtSize"
+                app:layout_constraintStart_toEndOf="@+id/txtPosition"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txtSize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="60dp"
+                android:textColor="@color/text_color_white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@+id/seekbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/seekbar" />
+
+            <TextView
+                android:id="@+id/txtPosition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:textColor="@color/text_color_white"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@+id/seekbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/seekbar" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
