--- a/app/src/main/res/layout/item_detail_chapter.xml
+++ b/app/src/main/res/layout/item_detail_chapter.xml
@@ -7,12 +7,15 @@
             name="data"
             type="com.baokiin.mangatoon.data.model.ChapImage" />
     </data>
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/text_color_white"
+        >
     <ImageView
-        android:background="#fff"
         android:layout_width="match_parent"
         android:image="@{data.chapter_image_link}"
-        android:layout_height="wrap_content">
-
+        android:layout_height="match_parent">
     </ImageView>
+    </FrameLayout>
 </layout>
